fixing the mobile horizontal scroll issue

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,12 +1,13 @@
 #root {
   min-width: 0;
   width: 100%;
-  min-height: 100vh;
+  max-width: 100vw;
   margin: 0 auto;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: space-between;
+  overflow-x: hidden;
 }
 
 .card {
@@ -22,6 +23,10 @@
   padding-top: 100px;
   background-color: var(--background-color);
   color: var(--text-color);
+  width: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
+  box-sizing: border-box;
 
   .page-title {
     font-size: 2.25rem; // text-4xl (36px)
